add id element for h1

--- a/01.01.hello.html
+++ b/01.01.hello.html
@@ -11,7 +11,11 @@
     <script src="react/react-15.4.1/build/react-dom.js"></script>
     <script>
       ReactDOM.render(
-        React.DOM.h1(null, "Hello world!"),
+        React.DOM.h1(
+          {
+            id: "my-heading",
+          }, "Hello world!"
+        ),
         document.getElementById("app")
       );
     </script>
