add span tag for Hello

--- a/01.01.hello.html
+++ b/01.01.hello.html
@@ -14,7 +14,9 @@
         React.DOM.h1(
           {
             id: "my-heading",
-          }, "Hello world!"
+          },
+          React.DOM.span(null, "Hello"),
+          " world!"
         ),
         document.getElementById("app")
       );
