add em tag for 'Hell'.

--- a/01.01.hello.html
+++ b/01.01.hello.html
@@ -15,7 +15,10 @@
           {
             id: "my-heading",
           },
-          React.DOM.span(null, "Hello"),
+          React.DOM.span(null,
+            React.DOM.em(null, "Hell"),
+            "o"
+          ),
           " world!"
         ),
         document.getElementById("app")
