--- a/02.01.class.html
+++ b/02.01.class.html
@@ -1,10 +1,26 @@
-var Component = React.createClass({
-  render: function() {
-    return React.DOM.span(null, "カスタムコンポーネント");
-  }
-});
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Hello React</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <div id="app">
+    </div>
+    <script src="react/react-15.4.1/build/react.js"></script>
+    <script src="react/react-15.4.1/build/react-dom.js"></script>
+    <script>
+      var Component = React.createClass({
+        render: function() {
+          return React.DOM.span(null, "カスタムコンポーネント");
+        }
+     });
 
-ReactDOM.render(
-  React.createElement(Component),
-  document.getElementBy("app")
-);
+     ReactDOM.render(
+       React.createElement(Component),
+       document.getElementById("app")
+     );
+    </script>
+
+  </body>
+</html>
