--- a/02.07.state.html
+++ b/02.07.state.html
@@ -10,16 +10,32 @@
     <script src="react/react-15.4.1/build/react.js"></script>
     <script src="react/react-15.4.1/build/react-dom.js"></script>
     <script>
-      ReactDom.render(
+      var TextAreaCounter = React.createClass({
+        propTypes: {
+          text: React.PropTypes.string,
+        },
+
+        getDefaultProps: function() {
+          return {
+            text: '',
+          };
+        },
+
+        render: function() {
+          return React.DOM.div(null,
+            React.DOM.textarea({
+              defaultValue: this.props.text,
+            }),
+            React.DOM.h3(null, this.props.text.length)
+          );
+        }
+      });
+       ReactDOM.render(
         React.createElement(TextAreaCounter, {
           text: "ボブ",
         }),
         document.getElementById("app")
       );
-
-       
     </script>
-
-
   </body>
 </html>
