--- a/02.08.state.html
+++ b/02.08.state.html
@@ -21,6 +21,12 @@
           };
         },
 
+        getInitialState: function() {
+          return {
+            text: this.props.text,
+          };
+        },
+
         _textChange: function(ev) {
           this.setState({
             text: ev.target.value,
