--- a/03_excel/03.01.excel.html
+++ b/03_excel/03.01.excel.html
@@ -37,6 +37,14 @@
           );
         }
       });
+
+      React.DOM.render(
+        React.createElement(Excel, {
+          headers: headers,
+          initiaData; data,
+        })
+        document.getElementById("app")
+      };
     </script>
   </body>
 </html>
