fix path for React folder

--- a/03_excel/03.01.excel.html
+++ b/03_excel/03.01.excel.html
@@ -7,8 +7,8 @@
   <body>
     <div id="app">
     </div>
-    <script src="react/react-15.4.1/build/react.js"></script>
-    <script src="react/react-15.4.1/build/react-dom.js"></script>
+    <script src="../react/react-15.4.1/build/react.js"></script>
+    <script src="../react/react-15.4.1/build/react-dom.js"></script>
     <script>
       var headers = [
         "タイトル", "著者", "言語", "出版年", "売り上げ部数"
