--- a/03_excel/03.01.excel.html
+++ b/03_excel/03.01.excel.html
@@ -22,7 +22,7 @@
         ["Dream of the Red Chamber", "Cao Xueqin", "Chinese", "1754-1791", "100 milion"]
       ];
 
-      var Excel = React.crateClass({
+      var Excel = React.createClass({
         render: function() {
           return (
             React.DOM.table(null,
@@ -38,13 +38,13 @@
         }
       });
 
-      React.DOM.render(
+      ReactDOM.render(
         React.createElement(Excel, {
           headers: headers,
-          initiaData; data,
-        })
+          initiaData: data,
+        }),
         document.getElementById("app")
-      };
+      );
     </script>
   </body>
 </html>
