--- a/03_excel/03.01.excel.html
+++ b/03_excel/03.01.excel.html
@@ -24,6 +24,16 @@
 
       var Excel = React.createClass({
         displayName: 'Excel',
+        propTypes: {
+          headers: React.PropTypes.arrayOf(
+            React.PropTypes.string
+          ),
+          initialData: React.PropTypes.arrayOf(
+            React.PropTypes.arrayOf(
+              React.PropTypes.string
+            )
+          ),
+        },
         
         getInitialState: function() {
           return { data: this.props.initialData };
