--- a/03_excel/03.01.excel.html
+++ b/03_excel/03.01.excel.html
@@ -37,18 +37,26 @@
         },
         
         getInitialState: function() {
-          return { data: this.props.initialData };
+          return { 
+            data: this.props.initialData,
+            sortby: null,
+            descending: false
+          };
         },
 
         _sort: function(e) {
           var column = e.target.cellIndex;
           var data = this.state.data.slice()
+          var descending = this.state.sortby === column && !tihs.state.descending;
           data.sort(function(a, b) {
-            return a[column] > b[column] ? 1 : -1;
+            return descending 
+            ? (a[column] < b[column] ? 1 : -1)
+            : (a[column] > b[column] ? 1 : -1);
           });
-
           this.setState({
-            data: data
+            data: data,
+            sortby: column,
+            descending: descending,
           })
         },
 
@@ -58,8 +66,13 @@
               React.DOM.thead({ onClick: this._sort },
                 React.DOM.tr(null,
                   this.props.headers.map(function(title, idx) {
+                    if (this.state.sortby === idx ) {
+                      title += this.state.descending ? ' \u2191' : ' \u2193'
+                    } 
                     return React.DOM.th({ key: idx }, title);
-                  })
+                    
+                   // return React.DOM.th({ key: idx }, title);
+                  }, this)
                 )
               ),
               React.DOM.tbody(null,
