add showEdit method

--- a/03_excel/03.01.excel.html
+++ b/03_excel/03.01.excel.html
@@ -44,6 +44,13 @@
           };
         },
 
+        _showEditor: function(e) {
+          this.setState({edit: {
+            row: parseInt(e.target.dataset.row, 10),
+            cell: e.target.cellIndex,
+          }});
+        },
+
         _sort: function(e) {
           var column = e.target.cellIndex;
           var data = this.state.data.slice()
