eidt getInitialState method

--- a/03_excel/03.01.excel.html
+++ b/03_excel/03.01.excel.html
@@ -41,6 +41,7 @@
             data: this.props.initialData,
             sortby: null,
             descending: false
+            edit: null, // { row: 行番号, cell: 列番号 }
           };
         },
 
