add search to state

--- a/03_excel/03.01.excel.html
+++ b/03_excel/03.01.excel.html
@@ -42,6 +42,7 @@
             sortby: null,
             descending: false,
             edit: null, 
+            search : false,
           };
         },
 
