--- a/03_excel/03.01.excel.html
+++ b/03_excel/03.01.excel.html
@@ -64,6 +64,54 @@
           })
         },
 
+        _renderSearch: function() {
+          if (!this.state.search) {
+            return null;
+          }
+          return (
+            React.DOM.tr({onChange: this._search},
+              this.props.headers.map(function(_ignore, idx) {
+                return React.DOM.td({ key: idx },
+                  React.DOM.input({
+                    type: 'text',
+                    'data-idx': idx,
+                  })
+                );
+              })
+            )
+          );
+        },
+
+        _preSearchData: null,
+
+        _toggleSearch: function() {
+          if (this.state.search) {
+            this.setState({
+              data:this._preSearchData,
+              search: false,
+            });
+            this._preSerachData = null;
+          } else {
+            this._preSearchData = this.state.data;
+            this.setState({
+              search: true,
+            })
+          }
+        },
+
+        _search: function(e) {
+          var needle = e.target.value.toLowerCase();
+          if (!needle) {
+            this.setState({data: this._preSearchData});
+            return;
+          }
+          var idx = e.target.dataset.idx;
+          var searchdata = this._preSearchData.filter(function(row) {
+            return row[idx].toString().toLowerCase().indexOf(needle) > -1;
+          });
+          this.setState({data: searchdata});
+        },
+
         _sort: function(e) {
           var column = e.target.cellIndex;
           var data = this.state.data.slice()
@@ -90,6 +138,13 @@
         },
 
         _renderToolbar: function() {
+          return React.DOM.button(
+            {
+              onClick: this._toggleSearch,
+              className: 'toolbar',
+            },
+            '検索'
+          );
         },
         _renderTable: function() {
           return (
@@ -105,6 +160,7 @@
                 )
               ),
               React.DOM.tbody({ onDoubleClick: this._showEditor },
+                this._renderSearch(),
                 this.state.data.map(function(row, rowidx) {
                   return (
                     React.DOM.tr({ key: rowidx },
