--- a/03_excel/03.01.excel.html
+++ b/03_excel/03.01.excel.html
@@ -128,6 +128,25 @@
           })
         },
 
+        _download: function(format, ev) {
+          var contents = format === 'json'
+            ? JSON.stringify(this.state.data)
+            :this.state.data.reduce(function(result, row) {
+              return result
+                + row.reduce(function(rowresult, cell, idx) {
+                  return rowresult
+                    + '"'
+                    + cell.replace(/"/g, '""')
+                    + '"'
+                    + (idx < row.length - 1 ? ',' : '');
+                }, '')
+                + "\n";
+             }, '');
+           var URL = window.URL || window.webkitURL;
+           var blob = new Blob([contents], { type: 'text/' + format });
+           ev.target.href = URL.createObjectURL(blob);
+           ev.target.download = 'data.' + format;
+        },
         render: function() {
           return (
             React.DOM.div(null,
@@ -138,12 +157,19 @@
         },
 
         _renderToolbar: function() {
-          return React.DOM.button(
-            {
+          return React.DOM.div({ className: 'toolbar'},
+            React.DOM.button({
               onClick: this._toggleSearch,
               className: 'toolbar',
-            },
-            '検索'
+            },'検索'),
+            React.DOM.a({
+              onClick: this._download.bind(this, 'json'),
+              href: 'data.json'
+            }, 'JSON で保存'),
+            React.DOM.a({
+              onClick: this._download.bind(this, 'csv'),
+              href: 'data.csv'
+            }, 'CSV で保存')
           );
         },
         _renderTable: function() {
