renderSearch to JSX

--- a/04_JSX/04.ex.excel.html
+++ b/04_JSX/04.ex.excel.html
@@ -70,16 +70,11 @@
             return null;
           }
           return (
-            React.DOM.tr({onChange: this._search},
-              this.props.headers.map(function(_ignore, idx) {
-                return React.DOM.td({ key: idx },
-                  React.DOM.input({
-                    type: 'text',
-                    'data-idx': idx,
-                  })
-                );
-              })
-            )
+            <tr onChange={this._search}>
+              {this.props.headers.map(function(_ignore, idx) {
+                return <td key={idx}><input type="text" data-idx={idx}/></td>;
+              })}
+            </tr>
           );
         },
 
