--- a/04_JSX/04.ex.excel.html
+++ b/04_JSX/04.ex.excel.html
@@ -164,44 +164,39 @@
         },
         _renderTable: function() {
           return (
-            React.DOM.table(null,
-              React.DOM.thead({ onClick: this._sort },
-                React.DOM.tr(null,
+            <table>
+              <thead onClick={this._sort}>
+                <tr>{
                   this.props.headers.map(function(title, idx) {
-                    if (this.state.sortby === idx ) {
-                      title += this.state.descending ? ' \u2191' : ' \u2193'
-                    } 
-                    return React.DOM.th({ key: idx }, title);
+                    if (this.state.sortby === idx) {
+                      title += this.state.descending ? ' \u2191' : ' \u2193';
+                    }
+                    return <th key={idx}>{title}</th>
                   }, this)
-                )
-              ),
-              React.DOM.tbody({ onDoubleClick: this._showEditor },
-                this._renderSearch(),
-                this.state.data.map(function(row, rowidx) {
-                  return (
-                    React.DOM.tr({ key: rowidx },
-                      row.map(function(cell, idx) {
-                        var content = cell;
-
-                        var edit = this.state.edit;
-                        if (edit && edit.row === rowidx && edit.cell === idx ) {
-                          content = React.DOM.form({ onSubmit: this._save},
-                            React.DOM.input({
-                              type: 'text',
-                              defaultValue: content,
-                            })
-                          );
-                        }
-                        return React.DOM.td({
-                          key: idx,
-                          'data-row': rowidx
-                        }, content);
-                      }, this)
-                    )
-                  );
-                }, this)
-              )
-            )
+               }</tr>
+             </thead>
+             <tbody onDoubleClick={this._showEditor}>
+               {this._renderSearch()}
+               {this.state.data.map(function(row, rowidx) {
+                 return(
+                   <tr key={rowidx}>{
+                     row.map(function(cell, idx) {
+                       var content = cell;
+                       var edit = this.state.edit;
+                       if (edit && edit.row === rowidx && edit.cell === idx) {
+                         content = (
+                           <form onSubmit={this._save}>
+                             <input type="text" defaultValue={cell}/>
+                           </form>
+                        );
+                     }
+                     return <td key={idx} data-row={rowidx}>{content}</td>;
+                   }, this)}
+                   </tr>
+                 );
+               }, this)}
+               </tbody>
+             </table>
           );
         }
       });
