--- a/06_wine/index.html
+++ b/06_wine/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>App</title>
+    <title>Winepad v0.0.1</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="bundle.css">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="pad"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
+
