--- a/02.06.default.value.html
+++ b/02.06.default.value.html
@@ -1,17 +1,42 @@
-var Component = React.createClass({
-  propTypes: {
-    firstName: React.PropTypes.string.isRequired,
-    middleName: React.PropTypes.string,
-    familyName: React.PropTypes.string.isRequired,
-    address: React.PropTypes.string, 
-  },
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Hello React</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <div id="app">
+    </div>
+    <script src="react/react-15.4.1/build/react.js"></script>
+    <script src="react/react-15.4.1/build/react-dom.js"></script>
+    <script>
+        var TextAreaCounter = React.createClass({
+            propTypes: {
+                text: React.PropTypes.string,
+            },
 
-  getDefaultProps: function() {
-    return {
-      middleName: '',
-      address: 'なし',
-    };
-  },
+            getDefaultProps: function() {
+                return {
+                    text: '',
+                };
+            },
+            render : function() {
+                return React.DOM.div(null,
+                    React.DOM.textarea({
+                        defaultValue: this.props.text,
+                    }),
+                    React.DOM.h2(null, this.props.text.length)
+                );
+            }
+        });
 
-  render:function() { /* ... */ }
-});
+        ReactDOM.render(
+            React.createElement(TextAreaCounter, {
+                text: "ボブ",
+            }),
+            document.getElementById("app")
+        );
+
+    </script>
+    </body>
+</html>
